--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=ExamCardsApp
+
+# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/examCardsDb
+
+# Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+# Flyway configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.validate-migration-naming=true
+
+# Activate the profile
+spring.profiles.active=secrets
